WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118262
DrawingBuffer constructor and destructor not defined for Windows
https://bugs.webkit.org/show_bug.cgi?id=118262
Summary
DrawingBuffer constructor and destructor not defined for Windows
Alex Christensen
Reported
2013-07-01 14:02:00 PDT
The DrawingBuffer constructors and destructors for Cairo, Qt, and Mac are almost identical. I assume non-Cairo Windows should do the same thing. I'm not sure because Clutter and BlackBerry have significant differences from the other ports' constructors and destructors. The Mac constructor has Objective C calls inside it, so it can't easily be refactored to a C++ file, but the Cairo and Qt constructors can be combined.
Attachments
Patch
(8.31 KB, patch)
2013-07-01 14:09 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2013-07-01 14:09:16 PDT
Created
attachment 205834
[details]
Patch
WebKit Commit Bot
Comment 2
2013-07-01 16:21:55 PDT
Comment on
attachment 205834
[details]
Patch Clearing flags on attachment: 205834 Committed
r152269
: <
http://trac.webkit.org/changeset/152269
>
WebKit Commit Bot
Comment 3
2013-07-01 16:21:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug