DrawingBuffer constructor and destructor were not defined for Windows. I moved duplicate code from Cairo and Qt to DrawingBuffer.cpp to be used by Qt, Cairo, and Windows. https://bugs.webkit.org/show_bug.cgi?id=118262

Reviewed by Dean Jackson.

* platform/graphics/cairo/DrawingBufferCairo.cpp: Removed duplicate DrawingBuffer constructor and destructor.
* platform/graphics/gpu/DrawingBuffer.cpp:
(WebCore::DrawingBuffer::DrawingBuffer):
(WebCore::DrawingBuffer::~DrawingBuffer): Moved from Cairo and Qt implementation.
* platform/graphics/gpu/qt/DrawingBufferQt.cpp: Removed duplicate DrawingBuffer constructor and destructor.


Canonical link: https://commits.webkit.org/136298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152269 268f45cc-cd09-0410-ab3c-d52691b4dbfc